--- a/Assets/UI Toolkit/MenuUI.uxml
+++ b/Assets/UI Toolkit/MenuUI.uxml
@@ -6,5 +6,5 @@
         <ui:Button text="Remove" name="Remove" style="width: 220px; height: 60px; font-size: 20px; -unity-font-style: bold; align-self: flex-start; border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; margin-top: 25px; margin-left: 25px;" />
         <ui:Button text="Upgrade" name="Upgrade" style="width: 220px; height: 60px; font-size: 20px; -unity-font-style: bold; align-self: flex-start; border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; margin-top: 25px; margin-left: 25px;" />
     </ui:VisualElement>
-    <ui:Label text="000$" name="Money" style="font-size: 20px; -unity-font-style: bold; width: 220px; height: 60px; -unity-text-align: middle-center; align-self: flex-start;" />
+    <ui:Label text="000$" name="Money" style="font-size: 30px; -unity-font-style: bold; width: 220px; height: 100px; -unity-text-align: middle-center; align-self: flex-start; color: rgb(232, 255, 35);" />
 </ui:UXML>
